# switchbot_rs

./: Cargo.toml  LICENSE.md  README.md
src/: constant.rs  lib.rs  model.rs  protocol.rs
